1. 이슈 리스트 가져오기 로직 구현  - MVVM 기본 구조 세팅  - MainActivity.kt에 테스트 코드 추가
2. MainActivity 기본 UI 세팅

3. Util 클래스 추가

4. 필요한 라이브러리 Dependency 추가

--- a/ThingsflowProject/app/src/main/res/values/strings.xml
+++ b/ThingsflowProject/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">ThingsflowProject</string>
+    <string name="text_google_dagger">google / dagger</string>
 </resources>
